--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bharani Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/NewPortfolio/styles.css" />
-    <link rel="stylesheet" href="/NewPortfolio/media.css" />
+    <link rel="stylesheet" href="./NewPortfolio/styles.css" />
+    <link rel="stylesheet" href="./NewPortfolio/media.css" />
   </head>
   <body>
     <nav id="desktop-nav">
@@ -39,14 +39,14 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="/NewPortfolio/assets/profile.png" alt="Bharani profile picture" />
+        <img src="./NewPortfolio/assets/profile.png" alt="Bharani profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Bharanimanikandan</h1>
         <p class="section__text__p2">Frontend Developer</p>
         <div class="btn-container">
-            <a href="/NewPortfolio/assets/Bharanimanikandan.K CV.pdf" class="btn btn-color-2">
+            <a href="./NewPortfolio/assets/Bharanimanikandan.K CV.pdf" class="btn btn-color-2">
                 Download CV
             </a>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
