--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./NewPortfolio/assets/profile.png" alt="Bharani profile picture" />
+        <img src="./assets/profile.png" alt="Bharani profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Bharanimanikandan</h1>
         <p class="section__text__p2">Frontend Developer</p>
         <div class="btn-container">
-            <a href="./NewPortfolio/assets/Bharanimanikandan.K CV.pdf" class="btn btn-color-2">
+            <a href="./assets/Bharanimanikandan.K CV.pdf" class="btn btn-color-2">
                 Download CV
             </a>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
