--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bharani Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Bharani-portfolio/styles.css" />
-    <link rel="stylesheet" href="/Bharani-portfolio/media.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./media.css" />
   </head>
   <body>
     <nav id="desktop-nav">
