--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Bharanimanikandan</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Web Developer</p>
         <div class="btn-container">
-            <a href="./assets/Bharanimanikandan.K CV.pdf" class="btn btn-color-2">
+            <a href="./assets/Bharani Resume.pdf" class="btn btn-color-2">
                 Download CV
             </a>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -123,7 +123,7 @@
       <div class="skills-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="skills-sub-title">Frontend Development</h2>
+            <h2 class="skills-sub-title">Web Development</h2>
             <div class="article-container">
               <article>
                 <img src="./assets/html.png" alt="HTML" class="icon" />
@@ -146,15 +146,21 @@
             </div>
             <div class="article-container2">
               <article>
-                <img src="./assets/bootstrap.png" alt="JS icon" class="icon" />
+                <img src="./assets/bootstrap.png" alt="JS icon" class="icon justify-content-center" />
                 <div>
                   <h3>BootStrap</h3>
                 </div>
               </article>
               <article>
-                <img src="./assets/react.png" alt="JS icon" class="icon" />
+                <img src="./assets/react.png" alt="JS icon" class="icon justify-content-center" />
                 <div>
                   <h3>React</h3>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/java.png" alt="JS icon" class="icon justify-content-center" />
+                <div>
+                  <h3>Java</h3>
                 </div>
               </article>
             </div>
